style.css
/*
Theme Name: aaleader-child
Theme URI: http://localhost
Template: storefront
Author: Jeppe
Author URI: http://localhost
Version: 1.1.1653472169
Updated: 2022-05-25 11:49:29

*/




* {
    padding: 0;
    margin: 0;
}

/* Hero Billeder */
.hero{
	height: 80vh;
	width: 100vw;
	background-image: url('http://mahadeva.dk/wp-content/uploads/2022/06/DSC0504-scaled.jpg');
}

.heroh2{
	position: relative;
	width:100%;
	text-align: center;
	bottom: -20vh;
}

/* Fiks af Logo, Font + Basket til Navbar */
	#masthead.site-header {
		font-family: "Glegoo", "Noto Sans", sans-serif;
	}

    #site-header-cart {	/* Fiks alignment på indkøbskurv */
        width: 70px;
    }

    .woocommerce-Price-amount.amount {	/* Fjern DKK */
        display: none !important;
    }

    div.widget.woocommerce.widget_shopping_cart {
        display: none;
    }
/* -------------------------------- */


.entry-content {
    margin-top: -1.3rem
}


/* tekst til hero billed */
.caption{
    margin-top:20vw; 
    white-space: nowrap;
    color:black;

}

/* .logoheader {
    background-image: url("img/logo.png");
    width: 50px;
    height: 50px;

} */

.entry-title {
    display: none;
}

#masthead > div.col-full{
    display: none;
}

#masthead.site-header{
    padding-top: 1em !important;
}

/* fjerner en stor titel i navbaren */

.beta-stite-title {
    display: none;
}

header{
    padding: 0;
    margin: 0;
}


body {
    background-color: #FDFAF8;
  }


/* fjerner søge funktion */
.site-header .site-search { display: none; }


 .storefront-breadcrumb {
    display: none;
}


.page-id-20 .wp-container-3{
    padding-top: 65px;

}

.page-id-159 .entry-content * {
	font-family: "Glegoo", "Noto Sans", sans-serif;
	font-size: 1.1rem;
}

#post-20 > div.entry-content > div.wp-container-4.wp-block-group > div > div.wp-container-2.wp-block-column{
	margin-top: 5%
}

/* startside */
.page-id-159 .widget-area {
    display: none;
}

#post-66 p {
	font-family: "Glegoo", "Noto Sans", serif !important;
}

a.wp-block-button__link, button.add_to_cart_button {
	font-size: 1.15rem !important;
	padding: 12px !important;
}


/*  ---> specialarbejde <--- */
.topbox {
    position: absolute;
    z-index: 100;
    top: 400px;
    right: 5%;
    width: calc(240px + 4%);
    background-color: #ffffff;
    padding: 3%;
}

.topboxh3 {
	padding-bottom: 30px;
}

.topboxa {
	background-color: white;
	border: 3px solid #7C7065 !important;
	color: #7C7065;
	text-align: center;
	font-size: 28px;
	padding: 20px;
	width: 200px;
	cursor: pointer;
	margin: 5px;
	text-transform: capitalize;
	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.05) 0px 10px 10px;
}

.topboxa:hover {
	background-color: #7C7065;
	color: white;
}


.bottombox{
	background-color: #ffffff;
	padding: 45px;
}

article#post-66 .wp-block-columns {   /* Fiks item alignment på forside */
	align-items: center !important;
}

.wp-container-11.wp-block-columns {   /* Fiks item alignment på Specialarbejde side */
	align-items: center !important;
}

article#post-345 .wp-block-columns {   /* Fiks item alignment på Læderrep. og Hælebar side */
	align-items: center !important;
}


/* #post-179 > div.entry-content > div.wp-container-5.wp-block-group > div > div.wp-container-4.wp-block-group.billedbox > div {
    background-color:white;    
    width: 300px;
    padding: 25px;
    position: relative;
    margin-left: 50vw;
    top: -30vw
}

#post-179 > div.entry-content > div.wp-container-5.wp-block-group.alignfull > div > div.wp-container-4.wp-block-group.billedbox{
    display: none;
}
*/

/*     specialarbejde box i bunden */

#post-179 > div.entry-content > div.wp-container-20.wp-block-group{
    margin-top: 60px;
}

#post-179 > div.entry-content > div.wp-container-20.wp-block-group > div{

    margin-top: 10vw;
    background-color: white;

    width: 500px;
    margin: auto;
    flex: nowrap;
    justify-content: center;
    
}
/* 
kontakt */



/* 
hvem er jeg */
@media screen and (max-width: 600px) {

/*     specialarbejde box i bunden */
    #post-179 .wp-container-14{
        width: 300px;
        
        }
        #post-179 .wp-container-15{

        width: 65vw;

    
        }

  }


/* shop */

/* shop items størrelse */
#primary{
    width: 100%!important;
}




/* --- Rettelser til Webshop ------------------- */
	.woocommerce-shop .wp-block-navigation.items-justified-center {
		min-height: 72px;
	}

	.woocommerce-shop .wp-block-navigation .wp-block-navigation-item__content {
		font-size: 1.2rem;
		font-family: "Glegoo", "Noto Sans", sans-serif;
		font-weight: 700;
	}

	.woocommerce-shop .wp-container-2 {
		gap: 5%;
	}

	.woocommerce-shop .wc-block-components-product-name {
		font-size: 1.1rem;
		font-family: "Glegoo", "Noto Sans", sans-serif;
	}

	@media screen and (min-width: 600px) {
		.woocommerce-shop .wp-block-navigation__responsive-container:not(.hidden-by-default):not(.is-menu-open) {
			margin-top: -54px !important;
		}
	}

	ul.tabs.wc-tabs {	/* Fjern useless tab liste på shop items */
		display: none;
	}

	.woocommerce-tabs .panel {	/* Fjern useless tab liste på shop items */
		width: 100% !important;
	}
/* --- (slut på rettelser til webshop) --------- */


/* --- Styling af Footer ----------------------- */
    footer .col-full {
        text-align: center;
    }

    footer#colophon {
        padding: 0;
        background-image: url(https://mahadeva.dk/wp-content/uploads/2022/06/Footer-Texture-scaled.jpg);
        background-position: center;
        background-size: cover;
    }

	footer#colophon * {
		font-family: "Glegoo", "Noto Sans", sans-serif;
	}

    footer#colophon img {	/* Fiks størrelse på logo */
        max-width: 200px;
        padding: 0 18px;
        margin: 0 auto;
    }

    footer .links {
        margin: 0 auto;
        max-width: 360px;
        margin-top: -64px;
        margin-bottom: 12px;
    }

    footer .links a {
        text-decoration: none;
        font-size: 1.6rem;
        text-transform: uppercase;
    }

    footer .address p {
        font-size: 1.1rem;
        margin: 0;
        font-weight: 300;
        text-transform: uppercase;
    }

    footer .policies {
        width: 90%;
        margin: 0 auto;
		font-size: 0.8rem;
    }

    footer .policies a {
        text-decoration: none;
    }

    footer .copyright {
        margin: 18px 0;
		font-size: 0.8rem;
    }

    footer .copyright p {
        font-weight: 300;
        margin: 0;
    }

    footer .copyright a {
        font-weight: 700;
    }

    .site-info {
        display: none;
    }

    @media screen and (min-width: 450px) {
        footer .links {
            display: flex;
            justify-content: space-between;
        }
        footer .policies {
            display: flex;
            justify-content: space-between;
        }
    }
/* --- (slut på styling af footer) ------------- */


/* --- Merge af Nav og Bottom Bar ----------------------- */
    .storefront-handheld-footer-bar {
        top: 16px;
        bottom: unset;
        background: none;
        width: 110px;
        margin: 0 auto;
        position: absolute;
        box-shadow: none !important;
    }

    .storefront-handheld-footer-bar ul {
        width: 110px;
    }

    .storefront-handheld-footer-bar .my-account {
        display: none;
    }

    .storefront-handheld-footer-bar ul.columns-3 li {
        width: 50px;
    }

    .storefront-handheld-footer-bar ul li {
        background: none;
        float: none; 
    }

    .storefront-handheld-footer-bar ul li>a {
        height: 48px;
    }

    .storefront-handheld-footer-bar ul li>a::before {
        line-height: inherit;
        font-size: 1.5rem;
        bottom: unset;
    }

    .storefront-handheld-footer-bar ul li.search .site-search {
        top: -90px;
        padding: 0;
        background: none;
        left: -42px;
        width: 0px;
        transition: transform .2s;
    }

    .storefront-handheld-footer-bar ul li.search.active .site-search {
        transform: scale(1.2);
        top: 52px;
        width: 200px;
    }

    .widget_product_search form:not(.wp-block-search) input[type=search] {
        padding-left: none;
    }
/* --- (slut på fiks/merge af nav og bottom bar) ------------- */

#kontaktboks{
	display: none;
}


.page-id-179 .page-id-551 .kontaktboks {
    display: flex;
	flex-direction:column-reverse;
    justify-content: space-around;
    align-content:space-around;
}

.page-id-179 .page-id-551 .kontakt h2 {
	font-size:35px
}

.page-id-179 .page-id-551 .produkt h2 {
	font-size:35px;
}

.page-id-179 .page-id-551 input {
	margin-bottom:20px;
}

.page-id-179 .page-id-551 textarea {
	margin-bottom:20px;
}

.page-id-179 .page-id-551 .btn {
    background-color:#7C7065 ;
    width: 293px !important;
    height: 77px;
    color:#ffff;
 }

.page-id-179 .page-id-551 .produkt {
    display: flex;
    flex-direction: column;
    
}

.page-id-179 .page-id-551 .checkboks {
    display: flex;
    flex-direction: column;
    margin-top:20px;
	align-items:flex-start;
}

.page-id-179 .page-id-551 .sms {
    display: flex;
    flex-direction: row-reverse;
}

.page-id-179 .page-id-551 .ringer {
    display: flex;
    flex-direction: row-reverse;
}

.page-id-179 .page-id-551 .notifikationer {
    display: flex;
    flex-direction: row-reverse;
}

.page-id-179 .page-id-551 .svendborg {
    display: flex;
    flex-direction: row-reverse;
}


.page-id-179 .page-id-551 .information {
    display: flex;
    flex-direction: column;
	align-items:flex-start;
    
}

.page-id-179 .page-id-551 .information * {
    width: 100%;
}

.page-id-179 .page-id-551 .bokslille {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.page-id-179 .page-id-551 .bokslille * {
    width: 100%;
}

.page-id-179 .page-id-551 .billede {
    display: flex;
}

@media screen and (min-width: 992px) {
	.page-id-179 .page-id-551 .kontaktboks {
		display:flex;
		flex-direction:row;
		gap: 50px;
		align-items:baseline;
	}
}

